# Cypress

./: .dockerignore  .env.example  .env.worker.example  .gitignore  README.md  compose.yml  go.work
.claude/: CLAUDE.md
.github/workflows/: publish-worker-image.yml  test.yml
app/: package-lock.json  package.json
app/src/: App.tsx  index.css
app/src-tauri/src/: lib.rs  server.rs
app/src/components/: ModelPicker.tsx  ServerControl.tsx  (+1 more)
proto/: README.md  gen.sh  worker.proto
scripts/: README.md
server/: go.mod  main.go
server/audio/: pipeline.go  pipeline_test.go  ports.go  ws.go  ws_test.go
server/downloads/: downloads.go  downloads_test.go
server/inference/: catalog.go  catalog_test.go  downloads.go  familyenv.go  familyenv_test.go  handlers.go  handlers_test.go  integration_test.go  manager.go  manager_test.go  platform_test.go  reconnect.go  reconnect_test.go  stream.go  stream_test.go  worker.go  worker_test.go
server/models/: cache_test.go  catalog.go  catalog_test.go  info.go
server/transport/: ws.go
server/workers/: dial.go  dial_test.go  grpc.go  handle.go  spawn.go
worker/: Dockerfile  ipc_commands.py  main.py  platform_info.py  pyproject.toml  test_platform_info.py
worker/audio/: __init__.py  socket.py
worker/ipc/: __init__.py  commands.py  conftest.py  ports.py  server.py  test_commands.py
worker/models/: __init__.py  moshi.py  moshi_mlx.py  moshi_stream.py  test_moshi.py
worker/models/moshi/: __init__.py  mlx.py  pyproject.toml  test_mlx.py  test_stream.py  test_torch.py  torch.py
worker/models/personaplex/: pyproject.toml
(+6 files in other folders)
